--- a/site/src/app/device-view.component.html
+++ b/site/src/app/device-view.component.html
@@ -32,7 +32,7 @@
         <tbody>
           <tr>
             <th scope="row">power</th>
-            <td>{{tv.power}}</td>
+            <td id="tv-power">{{tv.power}}</td>
           </tr>
           <tr>
             <th scope="row">ch</th>
