update animation for all info

--- a/site/src/app/device-view.component.html
+++ b/site/src/app/device-view.component.html
@@ -36,7 +36,7 @@
           </tr>
           <tr>
             <th scope="row">ch</th>
-            <td>{{tv.input}}</td>
+            <td id="tv-input">{{tv.input}}</td>
           </tr>
         </tbody>
       </table>
@@ -47,11 +47,11 @@
         <tbody>
           <tr>
             <th scope="row">power</th>
-            <td>{{recorder.power}}</td>
+            <td id="recorder-power">{{recorder.power}}</td>
           </tr>
           <tr>
             <th scope="row">mode</th>
-            <td>{{recorder.mode}}</td>
+            <td id="recorder-mode">{{recorder.mode}}</td>
           </tr>
         </tbody>
       </table>
@@ -62,11 +62,11 @@
         <tbody>
           <tr>
             <th scope="row">power</th>
-            <td>{{ac.power}}</td>
+            <td id="ac-power">{{ac.power}}</td>
           </tr>
           <tr>
             <th scope="row">temp</th>
-            <td>{{ac.temp}}&#x2103;</td>
+            <td id="ac-temp">{{ac.temp}}&#x2103;</td>
           </tr>
         </tbody>
       </table>
@@ -77,7 +77,7 @@
         <tbody>
           <tr>
             <th scope="row">scene</th>
-            <td>{{light.scene}}</td>
+            <td id="light-scene">{{light.scene}}</td>
           </tr>
         </tbody>
       </table>
@@ -88,7 +88,7 @@
         <tbody>
           <tr>
             <th scope="row">status</th>
-            <td>{{shutter.status}}</td>
+            <td id="shutter-status">{{shutter.status}}</td>
           </tr>
         </tbody>
       </table>
