recorder title fixe

--- a/site/src/app/device-view.component.html
+++ b/site/src/app/device-view.component.html
@@ -9,11 +9,11 @@
           <div *ngIf="recorder.mode == 'list'" class="list">
             <div class="title">saved titles</div>
             <ul class="list-group">
-              <li class="list-group-item disabled">Cras justo odio</li>
-              <li class="list-group-item">Dapibus ac facilisis in</li>
-                <li class="list-group-item">Morbi leo risus</li>
-              <li class="list-group-item">Porta ac consectetur ac</li>
-                <li class="list-group-item">Vestibulum at eros</li>
+              <li class="list-group-item">ドラマ1</li>
+              <li class="list-group-item">ドラマ2</li>
+              <li class="list-group-item">ドラマ3</li>
+              <li class="list-group-item">ドラマ4</li>
+              <li class="list-group-item">映画</li>
             </ul>
           </div>
           <div *ngIf="recorder.mode == 'play'" class="ch">
