--- a/site/src/app/hems-test.component.html
+++ b/site/src/app/hems-test.component.html
@@ -56,9 +56,8 @@
   </div>
 </div>
 <div>
-  <h4>test</h4>
+  <h4>door open</h4>
   <div class="grid">
-    <a (click)="test()" class="button">test button</a>
-    <div id="test-div"></div>
+    <a (click)="test()" class="button">test</a>
   </div>
 </div>
