--- a/site/src/app/hems-test.component.html
+++ b/site/src/app/hems-test.component.html
@@ -32,6 +32,12 @@
 <div>
   <h4>door open</h4>
   <div class="grid">
+    <a (click)="doorOpenTest()" class="button">test</a>
+  </div>
+</div>
+<div>
+  <h4>window notify</h4>
+  <div class="grid">
     <a (click)="test()" class="button">test</a>
   </div>
 </div>
