--- a/site/src/app/hems-test.component.html
+++ b/site/src/app/hems-test.component.html
@@ -38,6 +38,6 @@
 <div>
   <h4>window notify</h4>
   <div class="grid">
-    <a (click)="test()" class="button">test</a>
+    <a (click)="windowNotify()" class="button">test</a>
   </div>
 </div>
