--- a/site/src/app/hems-test.component.html
+++ b/site/src/app/hems-test.component.html
@@ -36,8 +36,20 @@
   </div>
 </div>
 <div>
+  <h4>leaving home</h4>
+  <div class="grid">
+    <a (click)="leavingHomeTest()" class="button">test</a>
+  </div>
+</div>
+<div>
   <h4>window notify</h4>
   <div class="grid">
     <a (click)="windowNotify()" class="button">test</a>
+  </div>
+</div>
+<div>
+  <h4>pollen notify</h4>
+  <div class="grid">
+    <a (click)="pollenNotify()" class="button">test</a>
   </div>
 </div>
