aircon off notify

--- a/site/src/app/hems-test.component.html
+++ b/site/src/app/hems-test.component.html
@@ -48,6 +48,12 @@
   </div>
 </div>
 <div>
+  <h4>air conditioner notify</h4>
+  <div class="grid">
+    <a (click)="airconOffNotify()" class="button">test</a>
+  </div>
+</div>
+<div>
   <h4>pollen notify</h4>
   <div class="grid">
     <a (click)="pollenNotify()" class="button">test</a>
