aircon off notify

--- a/site/src/app/hems-test.component.html
+++ b/site/src/app/hems-test.component.html
@@ -59,3 +59,9 @@
     <a (click)="pollenNotify()" class="button">test</a>
   </div>
 </div>
+<div>
+  <h4>desk notify</h4>
+  <div class="grid">
+    <a (click)="deskNotify()" class="button">test</a>
+  </div>
+</div>
